--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -10,7 +10,7 @@ on:
         default: 'linux/amd64'
         options:
           - 'linux/amd64'
-          - 'linux/amd64,linux/arm64'
+          # - 'linux/amd64,linux/arm64'
       docker_tags:
         type: string
         description: 'Docker Tags'
@@ -42,7 +42,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            docker.io/keglin/pinchflat
+            # docker.io/jamesjnadeau/pinchflat
             ghcr.io/${{ github.repository }}
           # All non-release actions will be tagged as `dev` (ie: push, workflow_dispatch)
           tags: |
@@ -58,11 +58,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
